Fixed IE wrapping flash message problem

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -286,13 +286,14 @@ body {
 }
 
 .flash_notice {
-    clear: right;
+    clear:right;
     float:right;
     background:#99FF99;
     border:2px solid #00CC00;
     font-size:14px;
     padding:10px;
     margin:17px 0 0 0;
+    white-space:nowrap;
 }
 
 .link_to_new_block {
